alignment fix

--- a/styles/AdvancedEditor.css
+++ b/styles/AdvancedEditor.css
@@ -811,6 +811,7 @@
   margin-bottom: 4px;
   border: 1px solid #f2f2f2;
   border-radius: 6px;
+  position: relative;
 }
 
 .keywords-list span.keyword.no-tracking {
